[package]
name = "cargo-smol"
version = "0.1.0-alpha.0"
authors = ["rhay <me@russellhay.com>"]
edition = "2018"
description = "A cargo command that wraps cargo-test and uses the JSON output to give a summary"

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
term = "0.6.1"
termion = "1.5.3"
