[package]
name = "cargo-smol"
version = "0.1.2-alpha.0"
authors = ["rhay <me@russellhay.com>"]
edition = "2018"
description = "A cargo command that wraps cargo-test and uses the JSON output to give a summary"
repository = "https://github.com/RussTheAerialist/cargo-smol"
homepage = "https://github.com/RussTheAerialist/cargo-smol"
license = "MIT"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
term = "0.6.1"
termion = "1.5.3"
